Finished addign css attributes to give homework correct layout with containers and text/backgorund colors

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 <body>
     <section class="header">header</section>
     <nav class="nav">nav</nav>
-    <section class="section">section</section>
-    <section class="aside">aside</section>
-    <section class="article">article</section>
-    <section class="h">h1,h2,h3</section>
-    <section class="p">p</section>
-    <footer class="footer">footer</footer>
+    <section id="center">
+        <div class="section">
+            <p>section</p>
+            <div class="article">
+                <p>article</p>
+                <h2 class="h">h1,h2,h3</h2>
+                <p class="p">p</p>
+            </div>
+        </div>
+        <aside class="aside">aside</aside>
+    </section>
+<footer class="footer">footer</footer>
 </body>
 </html>
