made changes to width of body and inner sections to reflect homework requirements

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" style="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>I'll Do the Hard One Next</title>
 </head>
 <body>
+
     <section class="header">header</section>
     <nav class="nav">nav</nav>
     <section id="center">
@@ -21,6 +22,7 @@
         </div>
         <aside class="aside">aside</aside>
     </section>
+
 <footer class="footer">footer</footer>
 </body>
 </html>
